--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <td colspan="2"><h5>NoticeBoards</h5></td>
                 </tr>
                 <tr style="vertical-align: top;">
-                    <td >
+                    <td>
                         <input type="text" id="txtNoticeBoardTitle" placeholder="NoticeBoard Title">
                     </td>
                     <td align="bottom">
-                        <button id="btnAddNoticeBoard" class="btn btn-primary">Add
+                        <button id="btnAddNoticeBoard" class="btn btn-primary" onclick="getTitle()">Add
                         </button>
                     </td>
                 </tr>
@@ -37,9 +37,12 @@
     </div>
 </div>
 
-<script type="text/javascript" src="jQuery/jquery-1.10.2.min.js" ></script>
+<script type="text/javascript" src="jQuery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+
+<script type="text/javascript">
+</script>
 
 </body>
 
